[project]
name = "spaceship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Me myself and I", email = "unreal@yahoo.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
enable-warp-drive = 'spaceship.cli.enable_warp_drive:run'

